# shader-simulations

./: CMakeLists.txt  README.md  compute.glsl  compute_subtract.glsl  main.cpp  quad.h  quad_fs.glsl  quad_vs.glsl
fluid/: CMakeLists.txt  Fluid.cpp  Fluid.h  main.cpp  mouse.cpp  mouse.h
fluid/shaders/: fluidCompute.glsl  fs.glsl
include/: glBoilerplate.h  quad.h  shader.h
slime/: CMakeLists.txt  Makefile  main.cpp
slime/shaders/: compute.glsl  compute_subtract.glsl
